# itmo-cpp

./: LICENSE
asm/: CMakeLists.txt  add.asm  mul.asm
bigint/: big_integer.cpp  big_integer.h
bigint-optimized/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp
bigint-optimized/gtest/: gtest_main.cc
bigint-optimized/vector/: storage.cpp  storage.h
huffman/: CMakeLists.txt  test.sh
huffman/lib/gtest/: gtest.h
huffman/lib/huffman-lib/: CMakeLists.txt  Makefile  cmake_install.cmake  decoder.cpp  encoder.cpp  frequency.cpp  huffman.cpp  huffman_code.cpp  huffman_lib.cbp  tree.cpp
huffman/lib/huffman-lib/include/: consts.h  decoder.h  encoder.h  frequency.h  huffman.h  huffman_code.h  tree.h
huffman/src/: buffered_reader.cpp  buffered_reader.h  buffered_writer.cpp  buffered_writer.h  huffman_decoder.cpp  huffman_decoder.h  huffman_encoder.cpp  huffman_encoder.h  impl_consts.h  main.cpp
huffman/test/: huffman_lib_testing.cpp
list/: CMakeLists.txt  list.h  testing.cpp
list/gtest/: gtest-all.cc
set/: CMakeLists.txt  set.h  testing.cpp
